--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -60,8 +60,6 @@ jobs:
                     - "testReadOnly"
         runs-on: ${{ matrix.os }}
         env:
-            IGINX_CONDA_ENV: "iginxEnv"
-            IGINX_CONDA_FLAG: "true"
             METADATA_STORAGE: ${{ matrix.metadata }}
         steps:
             - uses: actions/checkout@v4
@@ -70,6 +68,8 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
+                  iginx-conda-flag: "true"
+                  iginx-conda-env: "iginxEnv"
 
             - name: Run Metadata
               uses: ./.github/actions/metadataRunner
