--- a/.github/workflows/case-regression.yml
+++ b/.github/workflows/case-regression.yml
@@ -35,9 +35,6 @@ jobs:
                 os: ${{ fromJSON(inputs.os-matrix) }}
                 metadata: ${{ fromJSON(inputs.metadata-matrix) }}
         runs-on: ${{ matrix.os }}
-        env:
-            IGINX_CONDA_ENV: "iginxEnv"
-            IGINX_CONDA_FLAG: "true"
         steps:
             - uses: actions/checkout@v4
             - name: Environment dependence
@@ -45,6 +42,8 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
+                  iginx-conda-flag: "true"
+                  iginx-conda-env: "iginxEnv"
 
             - name: Run Metadata
               uses: ./.github/actions/metadataRunner
