--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -48,9 +48,6 @@ jobs:
                 metadata: ${{ fromJSON(inputs.metadata-matrix) }}
                 DB-name: ${{ fromJSON(inputs.db-matrix) }}
         runs-on: ${{ matrix.os }}
-        env:
-            IGINX_CONDA_ENV: "iginxEnv"
-            IGINX_CONDA_FLAG: "true"
         steps:
             - uses: actions/checkout@v2
             - name: Environment dependence
@@ -59,6 +56,8 @@ jobs:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
                   docker-required: true
+                  iginx-conda-flag: "true"
+                  iginx-conda-env: "iginxEnv"
 
             - if: runner.os == 'Windows'
               name: Set up Docker Firewall on Windows
