--- a/dataSource/relational/src/main/resources/postgresql-meta.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta.properties
@@ -30,6 +30,10 @@ system_databases=template0,template1,readme_to_recover
 quote="
 # 删除数据库的SQL语句
 drop_database_statement=DROP DATABASE IF EXISTS %s WITH (FORCE);
+# 创建数据库的SQL语句
+create_database_statement=CREATE DATABASE %s;
+# 删除表字段
+alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s;
 # 在JDBC使用getTables时是否需要加引号
 jdbc_need_quote=false
 # upsert语句中间部分
