1.update docker setting for macos 2.add checking iginx status in inginx_udf_path.sh. 3.Exchange the execution order of test case in action Run Transform Job tests The reason for modifying the second and third points is that the Maos/windows Oracle test server runs slowly, which can cause the case to fail

--- a/.github/actions/service/oracle/action.yml
+++ b/.github/actions/service/oracle/action.yml
@@ -24,17 +24,15 @@ runs:
           id: oracleContainer
           shell: bash
           run: |
-              docker ps
-              sleep 10
               for port in ${{ inputs.ports }}; do
                 while true; do
                   log_output=$(docker logs "${{ inputs.version }}-$port" 2>&1 | grep -i "DATABASE IS READY TO USE" || true)
                   if [ -z "$log_output" ]; then
-                    echo "'XDB initialized' not found in the logs, retrying in 100 seconds..."
+                    echo "oracle service not started, retry in 10 seconds..."
                     docker logs --tail 10 ${{ inputs.version }}-$port
-                    sleep 30
+                    sleep 10
                   else
-                    echo "'XDB initialized.' found in the logs, continuing."
+                    echo "oracle service started."
                     break
                   fi
                 done
@@ -51,17 +49,15 @@ runs:
           id: oracleContainerWin
           shell: wsl-run {0}
           run: |
-              docker ps
-              sleep 10
               for port in ${{ inputs.ports }}; do
                 while true; do
                 log_output=$(docker logs "${{ inputs.version }}-$port" 2>&1 | grep -i "DATABASE IS READY TO USE" || true)
                 if [ -z "$log_output" ]; then
-                  echo "'XDB initialized' not found in the logs, retrying in 100 seconds..."
+                  echo "oracle service not started, retry in 10 seconds..."
                   docker logs --tail 10 ${{ inputs.version }}-$port
-                  sleep 30
+                  sleep 10
                 else
-                  echo "'XDB initialized.' found in the logs, continuing."
+                  echo "oracle service started."
                   break
                 fi
                 done
