--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -20,7 +20,7 @@ inputs:
         # all: setup all
     docker-required:
         description: "is docker needed in this test"
-        required: true
+        required: false
         default: "false"
 
 runs:
