just test free-thread-tests

--- a/.github/workflows/free-thread-test.yml
+++ b/.github/workflows/free-thread-test.yml
@@ -74,6 +74,7 @@ jobs:
             - name: TestController IT
               if: always()
               shell: bash
+              timeout-minutes: 10
               env:
                   METADATA_STORAGE: ${{ matrix.metadata }}
               run: |
