--- a/.github/actions/context/action.yml
+++ b/.github/actions/context/action.yml
@@ -61,22 +61,34 @@ runs:
               fi
 
         - if: inputs.shell=='client-after'
+          name: Install wget and 7zip
+          shell: bash
+          run: |
+              if [ "$RUNNER_OS" == "Linux" ]; then
+                sudo apt-get install -y p7zip-full
+                sudo apt-get install -y wget
+              elif [ "$RUNNER_OS" == "Windows" ]; then
+                choco install 7zip -y
+                choco install wget -y
+              elif [ "$RUNNER_OS" == "macOS" ]; then
+                brew install p7zip
+                brew install wget
+              fi
+
+        - if: inputs.shell=='client-after'
           name: Pre Test Client Import File
           shell: bash
           run: |
               wget https://github.com/IGinX-THU/IGinX-resources/raw/main/resources/bigcsv.7z
               if [ "$RUNNER_OS" == "Linux" ]; then
-                sudo apt-get install p7zip-full
                 7za x bigcsv.7z
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile.sh" ${VERSION}
               elif [ "$RUNNER_OS" == "Windows" ]; then
-                choco install 7zip -y
                 7za x bigcsv.7z
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_windows.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_windows.sh" ${VERSION}
               elif [ "$RUNNER_OS" == "macOS" ]; then
-                brew install p7zip
                 7za x bigcsv.7z
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_macos.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile_macos.sh" ${VERSION}
