--- a/.github/actions/context/action.yml
+++ b/.github/actions/context/action.yml
@@ -80,7 +80,7 @@ runs:
           shell: bash
           run: |
               wget https://github.com/IGinX-THU/IGinX-resources/raw/main/resources/bigcsv.7z
-              7za x bigcsv.7z
+              7z x bigcsv.7z
               if [ "$RUNNER_OS" == "Linux" ]; then
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_infile.sh" ${VERSION}
