--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -179,3 +179,27 @@ runs:
               -Dversion=19.3.0.0 ^
               -Dpackaging=jar ^
               -Dfile=ojdbc8.jar
+
+        - if: runner.os == 'Linux' || runner.os == 'macOS'
+          name: Download and Install Dameng JDBC Driver
+          shell: bash
+          run: |
+              wget https://github.com/LeanMaX/IGinX-resources/raw/refs/heads/master/DmJdbcDriver8.jar  
+              mvn install:install-file \
+              -DgroupId=dm.jdbc \
+              -DartifactId=DmJdbcDriver8 \
+              -Dversion=1.0 \
+              -Dpackaging=jar \
+              -Dfile=DmJdbcDriver8.jar
+
+        - if: runner.os == 'Windows'
+          name: Download and Install Dameng JDBC Driver
+          shell: cmd
+          run: |
+              curl -L -o DmJdbcDriver8.jar https://github.com/LeanMaX/IGinX-resources/raw/refs/heads/master/DmJdbcDriver8.jar
+              mvn install:install-file ^
+              -DgroupId=dm.jdbc ^
+              -DartifactId=DmJdbcDriver8 ^
+              -Dversion=1.0 ^
+              -Dpackaging=jar ^
+              -Dfile=DmJdbcDriver8.jar
