--- a/dataSource/relational/pom.xml
+++ b/dataSource/relational/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>ojdbc8</artifactId>
             <version>19.3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>dm.jdbc</groupId>
+            <artifactId>DmJdbcDriver8</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
