--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -1,7 +1,7 @@
 # the storage engine that you want to test
 #storageEngineList=iotdb12
 storageEngineList=IoTDB12,InfluxDB,FileSystem,Relational,MongoDB,Redis,VectorDB
-relationalStorageEngineList=PostgreSQL,MySQL
+relationalStorageEngineList=PostgreSQL,MySQL,Oracle
 
 # the test for every engine
 test-list=UserPermissionIT,DataSourceIT,SQLSessionIT,OptimizerIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT,HostUtilsTest
@@ -24,6 +24,7 @@ MongoDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClea
 Redis-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 MySQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 VectorDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
+Oracle-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 
 # DataSources Test Config
 IoTDB12_mock=127.0.0.1#6667#IoTDB12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
@@ -35,6 +36,7 @@ Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 ## for mysql: meta_properties_path param can be removed here from next commit(for tpc-h test which will use old version of IGinX)
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root
 VectorDB_mock=127.0.0.1#19530#vectordb#protocol=grpc#has_data=false#is_read_only=false#timeout=5000
+Oracle_mock=127.0.0.1#1521#relational#engine=oracle#has_data=false#username=system#password=Oracle123
 
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
@@ -45,6 +47,7 @@ MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
 MySQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 VectorDB_class=cn.edu.tsinghua.iginx.vectordb.MilvusStorage
+Oracle_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 
 # class name for history data generator
 IoTDB12_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.iotdb.IoTDB12HistoryDataGenerator
@@ -55,6 +58,7 @@ MongoDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mongodb.Mongo
 Redis_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.redis.RedisHistoryDataGenerator
 MySQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mysql.MySQLHistoryDataGenerator
 VectorDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.vectordb.VectorDBHistoryDataGenerator
+Oracle_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.oracle.OracleHistoryDataGenerator
 
 # DB-CE port mapping, oriPort,expPort,readOnlyPort
 IoTDB12_port=6667,6668,6669
@@ -65,6 +69,7 @@ MongoDB_port=27017,27018,27019
 Redis_port=6379,6380,6381
 MySQL_port=3306,3307,3308
 VectorDB_port=19530,19531,19532
+Oracle_port=1521,1522,1523
 
 # Local test stand-alone
 stand_alone_DB=IoTDB12
