--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -34,6 +34,10 @@ inputs:
         required: false
         default: 19530
 
+    Oracle-ports:
+        description: "Oracle ports"
+        required: false
+        default: 1521
 runs:
     using: "composite" # Mandatory parameter
     steps:
@@ -140,3 +144,14 @@ runs:
               clean: false
               start: true
               ports: ${{ inputs.VectorDB-ports }}
+
+        - if: inputs.DB-name=='Oracle'
+          name: Setup DB
+          uses: ./.github/actions/setup/oracle
+
+        - if: inputs.DB-name == 'Oracle'
+          id: oracleService
+          name: Start Oracle Service
+          uses: ./.github/actions/service/oracle
+          with:
+              ports: ${{ inputs.Oracle-ports }}
