--- a/dataSource/relational/src/main/resources/postgresql-meta.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta.properties
@@ -18,35 +18,49 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-# 配置Postgresql META以供JDBCMeta读取
+# ??Postgresql META??JDBCMeta??
 
-# 驱动类
+# ???
 driver_class=org.postgresql.Driver
-# 默认数据库
+# ?????
 default_database=postgres
-# 系统数据库，用于过滤
+# ??????????
 system_databases=template0,template1,readme_to_recover
-# 用于包裹表名和字段名的引号
+# ?????????????
 quote="
-# 删除数据库的SQL语句
+# ??????SQL??
 drop_database_statement=DROP DATABASE IF EXISTS %s WITH (FORCE);
-# 在JDBC使用getTables时是否需要加引号
+# ??????SQL??
+create_database_statement=CREATE DATABASE %s;
+# ???
+create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s));
+# ?????
+alter_table_add_column_statement=ALTER TABLE %s ADD %s %s;
+# ?????
+alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s;
+# ???
+query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s;
+#
+query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
+# ?????
+delete_table_statement = UPDATE %s SET %s = null WHERE (%s >= %d AND %s < %d);
+# ?JDBC??getTables????????
 jdbc_need_quote=false
-# upsert语句中间部分
+# upsert??????
 upsert_statement= ON CONFLICT ("RELATIONAL+KEY") DO UPDATE SET 
-# upsert语句后面部分格式
+# upsert????????
 upsert_conflict_statement=%s = EXCLUDED.%s
-# 获取数据库列表的SQL语句
+# ????????SQL??
 database_query_sql=SELECT datname FROM pg_database;
-# 是否支持full join
+# ????full join
 is_support_full_join=true
-# filter中正则匹配的符号
+# filter????????
 regex_like_symbol=~
-# filter中不匹配正则表达式的符号
+# filter????????????
 not_regex_like_symbol=!~
-# jdbc元数据获取是否支持特殊字符识别
+# jdbc???????????????
 jdbc_support_special_char=true
-# pg中public部分为非元数据（真实数据）部分
+# pg?public???????????????
 schema_pattern=public
 
 # Postgresql DataTypeTransformer
