--- a/dataSource/relational/src/main/resources/postgresql-meta.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta.properties
@@ -18,49 +18,49 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-# ??Postgresql META??JDBCMeta??
+# 配置Postgresql META以供JDBCMeta读取
 
-# ???
+# 驱动类
 driver_class=org.postgresql.Driver
-# ?????
+# 默认数据库
 default_database=postgres
-# ??????????
+# 系统数据库，用于过滤
 system_databases=template0,template1,readme_to_recover
-# ?????????????
+# 用于包裹表名和字段名的引号
 quote="
-# ??????SQL??
+# 删除数据库的SQL语句
 drop_database_statement=DROP DATABASE IF EXISTS %s WITH (FORCE);
-# ??????SQL??
+# 创建数据库的SQL语句
 create_database_statement=CREATE DATABASE %s;
-# ???
+# 创建表
 create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s));
-# ?????
+# 增加表字段
 alter_table_add_column_statement=ALTER TABLE %s ADD %s %s;
-# ?????
+# 删除表字段
 alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s;
-# ???
+# 查询表
 query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s;
 #
 query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
-# ?????
+# 删除表数据
 delete_table_statement = UPDATE %s SET %s = null WHERE (%s >= %d AND %s < %d);
-# ?JDBC??getTables????????
+# 在JDBC使用getTables时是否需要加引号
 jdbc_need_quote=false
-# upsert??????
+# upsert语句中间部分
 upsert_statement= ON CONFLICT ("RELATIONAL+KEY") DO UPDATE SET 
-# upsert????????
+# upsert语句后面部分格式
 upsert_conflict_statement=%s = EXCLUDED.%s
-# ????????SQL??
+# 获取数据库列表的SQL语句
 database_query_sql=SELECT datname FROM pg_database;
-# ????full join
+# 是否支持full join
 is_support_full_join=true
-# filter????????
+# filter中正则匹配的符号
 regex_like_symbol=~
-# filter????????????
+# filter中不匹配正则表达式的符号
 not_regex_like_symbol=!~
-# jdbc???????????????
+# jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=true
-# pg?public???????????????
+# pg中public部分为非元数据（真实数据）部分
 schema_pattern=public
 
 # Postgresql DataTypeTransformer
