--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -89,6 +89,7 @@ jobs:
                   PostgreSQL-ports: 5432 5433 5434
                   Redis-ports: 6379 6380 6381
                   VectorDB-ports: 19530 19531 19532
+                  Oracle-ports: 1521 1522 1523
 
             - name: Install IGinX with Maven
               shell: bash
@@ -122,7 +123,7 @@ jobs:
 
             - name: ${{ matrix.test-way }} Normal IT
               shell: bash -el {0}
-              run: mvn test -q -Dtest=${{ inputs.functest }} -DfailIfNoTests=false -P-format
+              run: mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
               if: always()
