fix: fix testConfig

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -35,6 +35,7 @@ Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 ## for mysql: meta_properties_path param can be removed here from next commit(for tpc-h test which will use old version of IGinX)
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root
 Oracle_mock=127.0.0.1#1521#relational#engine=oracle#has_data=false#username=system#password=Oracle123
+Dameng=127.0.0.1#5236#relational#engine=dameng#has_data=false#username=SYSDBA#password=SYSDBA001
 
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
@@ -45,6 +46,7 @@ MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
 MySQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 Oracle_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
+Dameng_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 
 # class name for history data generator
 IoTDB12_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.iotdb.IoTDB12HistoryDataGenerator
@@ -55,6 +57,7 @@ MongoDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mongodb.Mongo
 Redis_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.redis.RedisHistoryDataGenerator
 MySQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mysql.MySQLHistoryDataGenerator
 Oracle_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.oracle.OracleHistoryDataGenerator
+Dameng_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.DamengHistoryDataGenerator
 
 # DB-CE port mapping, oriPort,expPort,readOnlyPort
 IoTDB12_port=6667,6668,6669
@@ -65,6 +68,7 @@ MongoDB_port=27017,27018,27019
 Redis_port=6379,6380,6381
 MySQL_port=3306,3307,3308
 Oracle_port=1521,1522,1523
+Dameng_port=5236,5237,5238
 
 # Local test stand-alone
 stand_alone_DB=IoTDB12
