fix: fix the query database and clear data in dameng history

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -33,7 +33,7 @@ system_databases=SYSDBA,SYS,DBA,OUTLN,DBSNMP,PUBLIC,USER
 quote="
 
 # 删除数据库的SQL语句
-drop_database_statement=DROP SCHEMA IF EXISTS %s;
+drop_database_statement=DROP SCHEMA IF EXISTS %s cascade;
 
 # 创建数据库
 create_database_statement=CREATE SCHEMA %s;
