--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -35,7 +35,7 @@ Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 ## for mysql: meta_properties_path param can be removed here from next commit(for tpc-h test which will use old version of IGinX)
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root
 Oracle_mock=127.0.0.1#1521#relational#engine=oracle#has_data=false#username=system#password=Oracle123
-Dameng=127.0.0.1#5236#relational#engine=dameng#has_data=false#username=SYSDBA#password=SYSDBA001
+Dameng_mock=127.0.0.1#5236#relational#engine=dameng#has_data=false#username=SYSDBA#password=SYSDBA001
 
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
