fix: fix the input of Boolean

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -87,7 +87,7 @@ not_regex_like_symbol=NOT REGEXP
 jdbc_support_special_char=false
 
 # 配置dm DataTypeTransformer
-TINYINT=IGinX-BOOLEAN
+#TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
 MEDIUMINT=IGinX-INTEGER
 INT=IGinX-INTEGER
@@ -101,6 +101,6 @@ DECIMAL=IGinX-DOUBLE
 IGinX-INTEGER=INTEGER
 IGinX-FLOAT=FLOAT
 IGinX-DOUBLE=DOUBLE
-IGinX-BOOLEAN=TINYINT
+#IGinX-BOOLEAN=TINYINT
 IGinX-BINARY=TEXT
 IGinX-LONG=BIGINT
