--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -72,7 +72,7 @@ upsert_statement=
 upsert_conflict_statement=
 
 # 获取数据库列表的SQL语句
-database_query_sql=SELECT USERNAME AS DATNAME FROM SYS.USERS
+database_query_sql=SELECT DISTINCT object_name TABLE_SCHEMA FROM all_objects WHERE object_type='SCH' AND OWNER='SYSDBA';
 
 # 是否支持full join
 is_support_full_join=true
