--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -37,9 +37,11 @@ on:
                 type: string
                 required: false
                 default: "false"
-
-env:
-    FUNCTEST: NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT
+            functest:
+                description: "Testcases to run"
+                type: string
+                required: false
+                default: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT"
 
 jobs:
     DB-CE:
@@ -86,6 +88,7 @@ jobs:
                   MySQL-ports: 3306 3307 3308
                   PostgreSQL-ports: 5432 5433 5434
                   Redis-ports: 6379 6380 6381
+                  VectorDB-ports: 19530 19531 19532
 
             - name: Install IGinX with Maven
               shell: bash
@@ -119,7 +122,7 @@ jobs:
 
             - name: ${{ matrix.test-way }} Normal IT
               shell: bash -el {0}
-              run: mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+              run: mvn test -q -Dtest=${{ inputs.functest }} -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
               if: always()
