--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -36,6 +36,37 @@ jobs:
         with:
             metadata-matrix: '["zookeeper"]'
             close-optimizer: "true"
+    standalone-test-vectordb:
+        uses: ./.github/workflows/standalone-test.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+            os-matrix: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+            db-matrix: '["VectorDB"]'
+            timeout-minutes: 300
+    standalone-test-no-optimizer-vectordb:
+        uses: ./.github/workflows/standalone-test-no-optimizer.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+            os-matrix: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+            db-matrix: '["VectorDB"]'
+            timeout-minutes: 300
+    db-ce-vectordb:
+        uses: ./.github/workflows/DB-CE.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+            os-matrix: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+            db-matrix: '["VectorDB"]'
+            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+            timeout-minutes: 360
+    db-ce-no-optimizer-vectordb:
+        uses: ./.github/workflows/DB-CE.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+            os-matrix: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+            db-matrix: '["VectorDB"]'
+            functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
+            timeout-minutes: 360
+            close-optimizer: "true"
     remote-test:
         uses: ./.github/workflows/remote-test.yml
         with:
@@ -57,3 +88,18 @@ jobs:
             os-matrix: '["ubuntu-latest"]'
             metadata-matrix: '["zookeeper"]'
             close-optimizer: "true"
+    tpc-h-regression-test-vectordb:
+        uses: ./.github/workflows/tpc-h.yml
+        with:
+            os-matrix: '["ubuntu-latest"]'
+            metadata-matrix: '["zookeeper"]'
+            db-matrix: '["VectorDB"]'
+            timeout-minutes: 360
+    tpc-h-regression-test-no-optimizer-vectordb:
+        uses: ./.github/workflows/tpc-h.yml
+        with:
+            os-matrix: '["ubuntu-latest"]'
+            metadata-matrix: '["zookeeper"]'
+            db-matrix: '["VectorDB"]'
+            close-optimizer: "true"
+            timeout-minutes: 360
