--- a/dataSource/relational/pom.xml
+++ b/dataSource/relational/pom.xml
@@ -56,7 +56,7 @@
             <version>8.0.26</version>
         </dependency>
         <dependency>
-            <groupId>com.oracle</groupId>
+            <groupId>com.oracle.ojdbc</groupId>
             <artifactId>ojdbc8</artifactId>
             <version>19.3.0.0</version>
         </dependency>
