update oracle docker service log

--- a/.github/actions/service/oracle/action.yaml
+++ b/.github/actions/service/oracle/action.yaml
@@ -49,16 +49,18 @@ runs:
       id: oracleContainerWin
       shell: wsl-run {0}
       run: |
+        docker ps -a
         for port in ${{ inputs.ports }}; do
           while true; do
           log_output=$(docker logs "${{ inputs.version }}-$port" 2>&1 | grep -i "DATABASE IS READY TO USE" || true)
           if [ -z "$log_output" ]; then
-            echo "oracle service not started, retry in 10 seconds..."
+            echo "${{ inputs.version }}-$port service not started, retry in 10 seconds..."
             docker logs --tail 10 ${{ inputs.version }}-$port
             sleep 10
           else
-            echo "oracle service started."
+            echo "${{ inputs.version }}-$port service started."
             break
           fi
           done
         done
+        docker ps -a
