fix(relational): fix the meta of alter table drop column statement

--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -45,7 +45,7 @@ create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
 alter_table_add_column_statement=ALTER TABLE %s ADD (%s %s)
 
 # 删除表字段
-alter_table_drop_column_statement=ALTER TABLE %s.%s DROP COLUMN %s
+alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s
 
 # 查询表数据
 query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s
