--- a/.github/actions/iginxRunner/action.yml
+++ b/.github/actions/iginxRunner/action.yml
@@ -9,6 +9,14 @@ inputs:
         description: "to test UDF path detection"
         required: false
         default: "false"
+    activate-conda-flag:
+        description: "whether to manually activate conda env before start IGinX"
+        required: false
+        default: "false"
+    iginx-conda-env:
+        description: "required conda env name"
+        required: false
+        default: "false"
 
 runs:
     using: "composite" # Mandatory parameter
@@ -36,17 +44,28 @@ runs:
           name: Start IGinX
           shell: bash -el {0}
           run: |
-              which python
-              if [ "$RUNNER_OS" == "Linux" ]; then
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh" 6888 7888
-              elif [ "$RUNNER_OS" == "Windows" ]; then
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh" 6888 7888
-              elif [ "$RUNNER_OS" == "macOS" ]; then
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh" 6888 7888
-              fi
+                if [ "$RUNNER_OS" == "Linux" ]; then
+                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh"
+                    if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
+                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh" 6888 7888 "${{ inputs.iginx-conda-env }}"
+                    else
+                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh" 6888 7888
+                    fi
+                elif [ "$RUNNER_OS" == "Windows" ]; then
+                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh"
+                    if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
+                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh" 6888 7888 "${{ inputs.iginx-conda-env }}"
+                    else
+                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh" 6888 7888
+                    fi
+                elif [ "$RUNNER_OS" == "macOS" ]; then
+                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh"
+                    if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
+                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh" 6888 7888 "${{ inputs.iginx-conda-env }}"
+                    else
+                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh" 6888 7888
+                    fi
+                fi
 
         - if: inputs.if-test-udf=='false' && inputs.if-stop=='true'
           name: Stop IGinX
