--- a/.github/actions/iginxRunner/action.yml
+++ b/.github/actions/iginxRunner/action.yml
@@ -44,28 +44,31 @@ runs:
           name: Start IGinX
           shell: bash -el {0}
           run: |
-                if [ "$RUNNER_OS" == "Linux" ]; then
-                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh"
-                    if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
-                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh" 6888 7888 "${{ inputs.iginx-conda-env }}"
-                    else
-                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh" 6888 7888
-                    fi
-                elif [ "$RUNNER_OS" == "Windows" ]; then
-                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh"
-                    if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
-                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh" 6888 7888 "${{ inputs.iginx-conda-env }}"
-                    else
-                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh" 6888 7888
-                    fi
-                elif [ "$RUNNER_OS" == "macOS" ]; then
-                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh"
-                    if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
-                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh" 6888 7888 "${{ inputs.iginx-conda-env }}"
-                    else
-                        "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh" 6888 7888
-                    fi
-                fi
+              if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
+                  conda activate ${{ inputs.iginx-conda-env }}
+              fi
+              if [ "$RUNNER_OS" == "Linux" ]; then
+                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh"
+                  if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
+                      "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh" 6888 7888 "${{ inputs.iginx-conda-env }}"
+                  else
+                      "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh" 6888 7888
+                  fi
+              elif [ "$RUNNER_OS" == "Windows" ]; then
+                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh"
+                  if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
+                      "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh" 6888 7888 "${{ inputs.iginx-conda-env }}"
+                  else
+                      "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh" 6888 7888
+                  fi
+              elif [ "$RUNNER_OS" == "macOS" ]; then
+                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh"
+                  if [ "${{ inputs.activate-conda-flag }}" == "true" ]; then
+                      "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh" 6888 7888 "${{ inputs.iginx-conda-env }}"
+                  else
+                      "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh" 6888 7888
+                  fi
+              fi
 
         - if: inputs.if-test-udf=='false' && inputs.if-stop=='true'
           name: Stop IGinX
