--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -75,23 +75,13 @@ runs:
           id: find_python_cmd
           shell: bash -el {0}
           run: |
-              if [[ "${{ inputs.use-free-thread-python }}" == "true" ]]; then
-                  if [ "$RUNNER_OS" == "Windows" ]; then
-                      pythonPath=$(echo "$FT_PYTHON_PATH" | sed 's/\\/\//g')
-                      pythonCMD="${pythonPath}/python3.13t.exe"
-                      echo "TORCH_SUPPORTED=false" >> $GITHUB_ENV
-                  else
-                      pythonCMD='python3.13t'
-                      echo "TORCH_SUPPORTED=false" >> $GITHUB_ENV
-                  fi
+              if [ "$RUNNER_OS" == "Windows" ]; then
+                  pythonCMD=python
               else
-                  if [ "$RUNNER_OS" == "Windows" ]; then
-                      pythonCMD=python
-                  else
-                      pythonCMD=python3
-                  fi
+                  pythonCMD=python3
               fi
               # have to set env to make it work in ut tests
+              ${pythonCMD} -VV
               echo "pythonCMD=${pythonCMD}" >> $GITHUB_ENV
               echo "pythonCMD=${pythonCMD}" >> $GITHUB_OUTPUT
               echo ${pythonCMD}
